--- a/aethc_cli/Cargo.toml
+++ b/aethc_cli/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2024"
 [dependencies]
 aethc_core = { path = "../aethc_core" }
 
+[build-dependencies]
+cc = "1.0"
+
+[dev-dependencies]
+tempfile = "3"
+
