--- a/aethc_cli/Cargo.toml
+++ b/aethc_cli/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
-name = "aethc_cli"
+name = "aethc"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 aethc_core = { path = "../aethc_core" }
+clap = { version = "4", features = ["derive"] }
+ariadne = "0.4"
+inkwell = "0.2"
 
 [build-dependencies]
 cc = "1.0"
 
 [dev-dependencies]
 tempfile = "3"
+assert_cmd = "2"
 
