--- a/aethc_cli/Cargo.toml
+++ b/aethc_cli/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 aethc_core = { path = "../aethc_core" }
 clap = { version = "4", features = ["derive"] }
 ariadne = "0.4"
-inkwell = { version = "0.3", features = ["llvm16-0"] }
+inkwell = { version = "0.2.0", features = ["llvm16-0", "full"] }
 
 [build-dependencies]
 cc = "1.0"
