--- a/aethc_core/Cargo.toml
+++ b/aethc_core/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-inkwell = { version = "0.3", features = ["llvm16-0"] }
+inkwell = { version = "0.2.0", features = ["llvm16-0", "full"] }
