--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,16 +13,23 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        override: true
+      uses: dtolnay/rust-toolchain@stable
+        
+    - name: Check Rust version
+      run: |
+        rustc --version
+        cargo --version
+        
+    - name: Check project structure
+      run: |
+        dir
+        type Cargo.toml
         
     - name: Build project
-      run: cargo build --release
+      run: cargo build --release --verbose
       
     - name: Run tests
-      run: cargo test --release
+      run: cargo test --release --verbose
       
     - name: List built files
       run: dir target\release
