--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,16 +16,13 @@ jobs:
       uses: dtolnay/rust-toolchain@stable
       
     - name: Install LLVM 16
-      run: |
-        $url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-16.0.6/LLVM-16.0.6-win64.exe"
-        $output = "llvm-installer.exe"
-        Invoke-WebRequest -Uri $url -OutFile $output
-        Start-Process -FilePath $output -ArgumentList "/S" -Wait
+      uses: KyleMayes/install-llvm-action@v1
+      with:
+        version: "16.0"
         
     - name: Set LLVM environment variables
       run: |
-        echo "LLVM_SYS_160_PREFIX=C:\Program Files\LLVM" >> $env:GITHUB_ENV
-        echo "C:\Program Files\LLVM\bin" >> $env:GITHUB_PATH
+        echo "LLVM_SYS_160_PREFIX=${{ env.LLVM_PATH }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         
     - name: Check Rust version
       run: |
@@ -34,8 +31,9 @@ jobs:
         
     - name: Verify LLVM installation
       run: |
-        llvm-config --version
+        echo "LLVM_PATH: ${{ env.LLVM_PATH }}"
         echo "LLVM_SYS_160_PREFIX: $env:LLVM_SYS_160_PREFIX"
+        llvm-config --version
         
     - name: Check project structure
       run: |
