--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,50 +7,56 @@ on:
 jobs:
   build-windows:
     runs-on: windows-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
-      
+
     - name: Install LLVM 16
       uses: KyleMayes/install-llvm-action@v1
       with:
         version: "16.0"
-        
-    - name: Set LLVM environment variables
+
+    # ─── insert this step ──────────────────────────────────────────────
+    - name: Add LLVM to PATH
+      shell: pwsh
       run: |
-        echo "LLVM_SYS_160_PREFIX=${{ env.LLVM_PATH }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        
+        # LLVM_PATH is set by the install-llvm-action, e.g. "C:\Program Files\LLVM"
+        $llvmBin = Join-Path $env:LLVM_PATH 'bin'
+        Write-Host "Adding LLVM bin to PATH: $llvmBin"
+        # Append to GITHUB_PATH so subsequent steps see it
+        $llvmBin | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
+    # ────────────────────────────────────────────────────────────────────
+
     - name: Check Rust version
       run: |
         rustc --version
         cargo --version
-        
+
     - name: Verify LLVM installation
       run: |
-        echo "LLVM_PATH: ${{ env.LLVM_PATH }}"
-        echo "LLVM_SYS_160_PREFIX: $env:LLVM_SYS_160_PREFIX"
+        Write-Host "PATH = $env:PATH"
         llvm-config --version
-        
+
     - name: Check project structure
       run: |
         dir
         type Cargo.toml
-        
+
     - name: Build project
       run: cargo build --release --verbose
-      
+
     - name: Run tests
       run: cargo test --release --verbose
-      
+
     - name: List built files
       run: dir target\release
-      
+
     - name: Upload executable
       uses: actions/upload-artifact@v4
       with:
         name: windows-build
-        path: target/release/*.exe
+        path: target\release\*.exe
