--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,55 +8,52 @@ jobs:
   build-windows:
     runs-on: windows-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+ steps:
+  - name: Checkout code
+    uses: actions/checkout@v4
 
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+  - name: Install Rust
+    uses: dtolnay/rust-toolchain@stable
 
-    - name: Install LLVM 16
-      uses: KyleMayes/install-llvm-action@v1
-      with:
-        version: "16.0"
+  - name: Install LLVM 16
+    uses: KyleMayes/install-llvm-action@v1
+    with:
+      version: "16.0"
 
-    # ─── insert this step ──────────────────────────────────────────────
-    - name: Add LLVM to PATH
-      shell: pwsh
-      run: |
-        # LLVM_PATH is set by the install-llvm-action, e.g. "C:\Program Files\LLVM"
-        $llvmBin = Join-Path $env:LLVM_PATH 'bin'
-        Write-Host "Adding LLVM bin to PATH: $llvmBin"
-        # Append to GITHUB_PATH so subsequent steps see it
-        $llvmBin | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
-    # ────────────────────────────────────────────────────────────────────
+  - name: Add LLVM to PATH
+    shell: pwsh
+    run: |
+      $llvmBin = Join-Path $env:LLVM_PATH 'bin'
+      Write-Host "Adding LLVM bin to PATH: $llvmBin"
+      $llvmBin | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
-    - name: Check Rust version
-      run: |
-        rustc --version
-        cargo --version
+  - name: Check Rust version
+    run: |
+      rustc --version
+      cargo --version
 
-    - name: Verify LLVM installation
-      run: |
-        Write-Host "PATH = $env:PATH"
-        llvm-config --version
+  - name: Verify LLVM installation
+    shell: pwsh
+    run: |
+      Write-Host "PATH = $env:PATH"
+      &"${env:LLVM_PATH}\bin\clang.exe" --version
 
-    - name: Check project structure
-      run: |
-        dir
-        type Cargo.toml
+  - name: Check project structure
+    run: |
+      dir
+      type Cargo.toml
 
-    - name: Build project
-      run: cargo build --release --verbose
+  - name: Build project
+    run: cargo build --release --verbose
 
-    - name: Run tests
-      run: cargo test --release --verbose
+  - name: Run tests
+    run: cargo test --release --verbose
 
-    - name: List built files
-      run: dir target\release
+  - name: List built files
+    run: dir target\release
 
-    - name: Upload executable
-      uses: actions/upload-artifact@v4
-      with:
-        name: windows-build
-        path: target\release\*.exe
+  - name: Upload executable
+    uses: actions/upload-artifact@v4
+    with:
+      name: windows-build
+      path: target/release/*.exe
