--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,12 @@ jobs:
         Write-Host "Adding LLVM bin to PATH: $llvmBin"
         $llvmBin | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
+    - name: Set LLVM_SYS_160_PREFIX
+      shell: pwsh
+      run: |
+        Write-Host "Setting LLVM_SYS_160_PREFIX to $env:LLVM_PATH"
+        Write-Output "LLVM_SYS_160_PREFIX=$env:LLVM_PATH" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+
     - name: Check Rust version
       run: |
         rustc --version
