--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,59 +7,64 @@ on:
 jobs:
   build-windows:
     runs-on: windows-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      # ────────────────────────────────────────────────
+      # Source code & toolchains
+      # ────────────────────────────────────────────────
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+      - name: Install Rust toolchain (stable-MSVC)
+        uses: dtolnay/rust-toolchain@stable
 
-    - name: Install LLVM 16
-      uses: KyleMayes/install-llvm-action@v1
-      with:
-        version: "16.0"
+      - name: Install full LLVM 16 with llvm-config (Chocolatey)
+        shell: pwsh
+        run: |
+          choco install llvm --version=16.0.6 -y
+          # Short 8.3 form of the path removes the space in "Program Files".
+          $short = cmd /c "for %I in (\"$Env:ProgramFiles\\LLVM\") do @echo %~sI"
+          $short = $short.Trim()
+          Write-Host "LLVM short path = $short"
+          # Export for later steps & llvm-sys build script
+          "LLVM_SYS_160_PREFIX=$short" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+          # Put bin dir on PATH for this and subsequent steps
+          "$short\bin" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
-    - name: Add LLVM to PATH
-      shell: pwsh
-      run: |
-        $llvmBin = Join-Path $env:LLVM_PATH 'bin'
-        Write-Host "Adding LLVM bin to PATH: $llvmBin"
-        $llvmBin | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
+      # ────────────────────────────────────────────────
+      # Sanity checks
+      # ────────────────────────────────────────────────
+      - name: Check tool versions
+        shell: pwsh
+        run: |
+          rustc --version
+          cargo --version
+          llvm-config --version
+          clang --version
 
-    - name: Set LLVM_SYS_160_PREFIX
-      shell: pwsh
-      run: |
-        Write-Host "Setting LLVM_SYS_160_PREFIX to $env:LLVM_PATH"
-        Write-Output "LLVM_SYS_160_PREFIX=$env:LLVM_PATH" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+      # ────────────────────────────────────────────────
+      # Build & test
+      # ────────────────────────────────────────────────
+      - name: Show project manifest
+        shell: pwsh
+        run: |
+          dir | select -First 20
+          type Cargo.toml
 
-    - name: Check Rust version
-      run: |
-        rustc --version
-        cargo --version
+      - name: Build project
+        run: cargo build --release --verbose
 
-    - name: Verify LLVM installation
-      shell: pwsh
-      run: |
-        Write-Host "PATH = $env:PATH"
-        &"${env:LLVM_PATH}\bin\clang.exe" --version
+      - name: Run tests
+        run: cargo test --release --verbose
 
-    - name: Check project structure
-      run: |
-        dir
-        type Cargo.toml
+      # ────────────────────────────────────────────────
+      # Artifacts
+      # ────────────────────────────────────────────────
+      - name: List built files
+        shell: pwsh
+        run: dir target\release
 
-    - name: Build project
-      run: cargo build --release --verbose
-
-    - name: Run tests
-      run: cargo test --release --verbose
-
-    - name: List built files
-      run: dir target\release
-
-    - name: Upload executable
-      uses: actions/upload-artifact@v4
-      with:
-        name: windows-build
-        path: target/release/*.exe
+      - name: Upload executable(s)
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-build
+          path: target/release/*.exe
