--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,34 +17,34 @@ jobs:
       - name: Install Rust toolchain (stable-MSVC)
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install full LLVM 16 with llvm-config (Chocolatey)
+      - name: Install LLVM 16 (with llvm-config) into C:\llvm
         shell: pwsh
         run: |
-          choco install llvm --version=16.0.6 -y
-          # Short 8.3 form of the path removes the space in "Program Files".
-          $short = cmd /c "for %I in (\"$Env:ProgramFiles\\LLVM\") do @echo %~sI"
-          $short = $short.Trim()
-          Write-Host "LLVM short path = $short"
-          # Export for later steps & llvm-sys build script
-          "LLVM_SYS_160_PREFIX=$short" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
-          # Put bin dir on PATH for this and subsequent steps
-          "$short\bin" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
+          # Install to a custom dir without spaces
+          choco install llvm --version=16.0.6 -y --params "'/InstallDir:C:\\llvm'"
+
+          # Export for llvm-sys build script
+          "LLVM_SYS_160_PREFIX=C:\\llvm" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+
+          # Put <install>/bin on PATH for subsequent steps
+          "C:\\llvm\\bin" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
       # ────────────────────────────────────────────────
       # Sanity checks
       # ────────────────────────────────────────────────
-      - name: Check tool versions
+      - name: Check tool versions & env
         shell: pwsh
         run: |
           rustc --version
           cargo --version
+          Write-Host "LLVM_SYS_160_PREFIX = $Env:LLVM_SYS_160_PREFIX"
           llvm-config --version
           clang --version
 
       # ────────────────────────────────────────────────
       # Build & test
       # ────────────────────────────────────────────────
-      - name: Show project manifest
+      - name: Show project manifest (first 20 entries)
         shell: pwsh
         run: |
           dir | select -First 20
